# highsteel-prodctrl

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  config.toml  deploy.ps1  reset.ps1
.cargo/: config.toml
api/: Cargo.toml
api/src/: lib.rs
api/src/part/: dbcompat.rs  mod.rs  part.rs
assets/: default.toml
config/: Cargo.toml  build.rs
config/src/: db.rs  lib.rs
db/: Cargo.toml
db/src/: config.rs  conn.rs  db.rs  lib.rs
db/src/bom/: bom.rs  keys.rs  mod.rs
db/src/sn/: cnf.rs  jobship.rs
examples/: bom.rs  compare.rs  lb.rs  sap_cnf_files.rs
examples/cmp/: driver.rs  mod.rs  progress.rs
examples/cmp/actors/: actor.rs  both.rs  db.rs  mod.rs
examples/cmp/api/: bom.rs  dxf.rs  mod.rs  sndb.rs
examples/compare/: driver.rs
examples/compare/actors/: both.rs  mod.rs
examples/compare/api/: bom.rs  dxf.rs  mod.rs
src/: app.rs  config.rs  db.rs  lib.rs
src/api/: jobship.rs  mod.rs
src/api/part/: comm.rs  dbcompat.rs  grade.rs  material.rs  mod.rs  part.rs
src/api/sap/: mod.rs  plant.rs
src/cli/: job_ship.rs  mod.rs  questions.rs
src/cnf/: cnf_file_row.rs  mod.rs
src/compare/: _driver copy.rs  _driver.rs  driver.rs  mod.rs  progress.rs  task.rs
src/compare/actors/: actor.rs  bom.rs  both.rs  channels.rs  db.rs  dxf.rs  handle.rs  job.rs  mod.rs  part.rs  sndb.rs
src/compare/api/: bom.rs  dxf.rs  jobship.rs  mod.rs  part.rs  sndb.rs
src/config/: config.rs  db.rs  mod.rs
src/core/: logging.rs  mod.rs
src/core/api/: grade.rs  jobship.rs  mod.rs
src/core/api/cnf/: cnf_row.rs  issue_row.rs  mod.rs
src/core/api/part/: comm.rs  material.rs  part.rs
src/core/api/sap/: plant.rs
src/db/: bom.rs  config.rs  conn.rs  db.rs  mod.rs  pools.rs
src/db/bom/: api_compat.rs  bom.rs  keys.rs  mod.rs
src/db/sn/: api_compat.rs  cnf.rs  jobship.rs  keys.rs  mod.rs
src/db/sn/simtrans/: mod.rs  sn8x.rs
src/fs/: mod.rs
src/fs/cnf/: mod.rs  paths.rs  processor.rs  row.rs
src/part/: mod.rs  part.rs
src/refactor/: app.rs  mod.rs
src/refactor/cnf/: mod.rs  processor.rs
src/refactor/compare/: mod.rs
src/refactor/compare/actors/: actor.rs
src/refactor/compare/api/: bom.rs  jobship.rs  sndb.rs
src/src/: app.rs  lib.rs
src/src/part/: grade.rs  material.rs
src/ui/: cli.rs  mod.rs
src/ui/cli/: app.rs  job_ship.rs  mod.rs  questions.rs
src/ui/gui/: mod.rs
src/workorder/: mod.rs  part_compare.rs
