# For documentation on this fine, see https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "prodctrl"
version = "0.1.0"
authors = [ "Patrick Miller" ]
edition = "2021"
description = "Production control automation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paddymills/highsteel-prodctrl"
default-run = "pc"

[workspace]
members = ["config", "db"]

[features]
default = []
full = [ "db", "gui", "xl" ]
db = [ "prodctrl-db" ]
gui = []
xl = [ "simple_excel_writer" ]

[dependencies]
prodctrl-config = { path = "config/" }
prodctrl-db = { path = "db/", optional = true }

chrono = "0.4"
csv = "1.1"
glob = "0.3"
lazy_static = "1.4"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }

# logging
log = "0.4"
simplelog = "0.12"

# cli/tui
# TODO: simplify progress (linya, nutmeg, pbr)
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
linya = "0.3"
nutmeg = "0.1"
pbr = "1.0"
requestty = "0.4"

# Excel
simple_excel_writer = { version = "0.2.0", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "sap_confirmation_files"
path = "bin/cnf/src/main.rs"

[[bin]]
name = "pc"
path = "bin/pc/src/main.rs"
required-features = [ "db" ]

[[bin]]
name = "cfg"
path = "bin/cfg-test/src/main.rs"
