# For documentation on this fine, see https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "prodctrl"
description = "Production control automation"
default-run = "pc"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = [ "Patrick Miller" ]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paddymills/highsteel-prodctrl"

[workspace]
members = [ "api", "config", "db" ]

[workspace.dependencies]
prodctrl-api = { path = "api/" }
prodctrl-config = { path = "config/" }
prodctrl-db = { path = "db/" }

serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
regex = "1.5"

[features]
default = [ "api", "config" ]
full = [ "db", "gui", "xl" ]
api = [ "prodctrl-api" ]
config = [ "prodctrl-config" ]
db = [ "prodctrl-db" ]
gui = []
xl = [ "simple_excel_writer" ]


[dependencies]
prodctrl-api = { workspace = true, optional = true }
prodctrl-config = { workspace = true, optional = true }
prodctrl-db = { workspace = true, optional = true }

chrono = "0.4"
csv = "1.1"
glob = "0.3"
rayon = "1.5"

# logging
log = "0.4"
simplelog = "0.12"

# cli/tui
# TODO: simplify progress (linya, nutmeg, pbr)
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
linya = "0.3"
nutmeg = "0.1"
pbr = "1.0"
requestty = "0.4"

# Excel
simple_excel_writer = { version = "0.2.0", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "sap_confirmation_files"
path = "bin/cnf/src/main.rs"

[[bin]]
name = "pc"
path = "bin/pc/src/main.rs"
required-features = [ "db" ]

[[bin]]
name = "cfg"
path = "bin/cfg-test/src/main.rs"
