# For documentation on this fine, see https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "prodctrl"
description = "Production control automation"
default-run = "pc"
authors = [ "Patrick Miller" ]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paddymills/highsteel-prodctrl"

[features]
default = [ "config" ]
full = [ "config", "db", "gui", "xl" ]
async = [ "async-trait", "tokio", "tokio-util" ]
config = []
# TODO: db -> db_mssql
db = [ "async", "mssql" ]
db_surreal = [ "async", "surrealdb" ]
# gui = [ "eframe", "egui" ]
gui = [ "eframe", "egui", "ico" ]
mssql = [ "bb8", "bb8-tiberius", "tiberius" ]
xl = [ "simple_excel_writer" ]


[dependencies]
chrono = "0.4"
csv = "1.1"
glob = "0.3"
lazy_static = "1.4"
rayon = "1.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }

# config
rust-embed = { version = "6.4.1", features = ["debug-embed", "include-exclude"] }
toml = "0.5.9"

# logging
log = "0.4"
simplelog = "0.12"

# async
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.19", features = ["net", "rt-multi-thread", "sync"], optional = true }
# tokio-util version must match version used in bb8-tiberius for type compatibility
tokio-util = { version = "0.6.2", features = [ "compat" ], optional = true }

# MSSQL database
bb8 = { version = "0.8", optional = true }
# see tokio-util dependency note below before upgrading bb8-tiberius version
bb8-tiberius = { version = "0.12.0", optional = true }
tiberius = { version = "0.10", features = [ "sql-browser-tokio", "integrated-auth-gssapi" ], optional = true }

# Surreal Database
surrealdb = { version = "1.0.0-beta.9", features = ["protocol-http"], optional = true }

# cli/tui
# TODO: simplify progress (linya, nutmeg, pbr)
clap = { version = "3.2", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
linya = "0.3"
nutmeg = "0.1"
pbr = "1.0"
requestty = "0.4"

# Excel
simple_excel_writer = { version = "0.2.0", optional = true }

# GUI
eframe = { version = "0.22", optional = true }
egui = { version = "0.22", optional = true }
ico = { version = "0.3", optional = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "sap_confirmation_files"
path = "src/bin/cnf/main.rs"
required-features = [ "db_surreal" ]

[[bin]]
name = "pc"
required-features = [ "db" ]

[[bin]]
name = "workorder"
required-features = [ "db" ]

[[bin]]
name = "extras"
required-features = [ "gui" ]
